<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    android:paddingHorizontal="@dimen/marginM"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXXL"
        android:text="@string/appTitle"
        android:textSize="48sp"
        android:textColor="#0c91e8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXXL"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:textStyle="bold"
        android:text="@string/participants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etParticipants"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marginL"
        android:paddingHorizontal="@dimen/marginM"
        android:ems="10"
        style="@style/Widget.AppCompat.EditText"
        android:inputType="number"
        android:background="@drawable/rounded_corner_et"
        android:layout_marginTop="@dimen/marginS"
        app:layout_constraintTop_toBottomOf="@id/tvParticipants"
        app:layout_constraintStart_toStartOf="parent"
        android:digits="0123456789"
        android:hint="@string/hintET"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/chPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_by_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParticipants"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:stepSize="10.0"
        app:layout_constraintTop_toBottomOf="@id/chPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/slider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btnStart"
    />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:layout_marginTop="@dimen/marginS"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>