<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/marginL"
        android:background="#fff"
        app:tint="#0C91E8"
        android:contentDescription="@string/button_close" />

    <ImageView
        android:id="@+id/ivNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_not_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/marginXXL"
        tools:ignore="ContentDescription" />
    
    <TextView
        android:id="@+id/code_404"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_404"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="#0C91E8"
        android:textSize="@dimen/textPrincipalSize"
        app:layout_constraintTop_toBottomOf="@id/ivNotFound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginL"
        />

    <TextView
        android:id="@+id/tvOops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/code_404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginM"
        />

    <TextView
        android:id="@+id/tvCodeBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found_error"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@id/tvOops"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginS"
        />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintTop_toBottomOf="@id/tvCodeBody"
        style="button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginL"
        />
</androidx.constraintlayout.widget.ConstraintLayout>